fixed bug with word wrapping in the comment card

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,25 @@
     --font-color-light-gray: #8297ab;
     --font-weight-normal: 400;
     --font-weight-bold: 700;
+
+    --main-scrollbar-width: 15px;
+    --main-scrollbar-thumb-color: #251216;
+    --main-scrollbar-track-color: #8297ab;
+
+    --body-background-color: #101f25;
 }
+
+/* *::-webkit-scrollbar {
+    width: var(--main-scrollbar-width);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--body-background-color);
+}
+
+*::-webkit-scrollbar-track {
+    background-color: var(--main-scrollbar-track-color);
+} */
 
 /* Reset */
 * {
@@ -107,6 +125,10 @@ body {
 /* Comment Date */
 .comment-date {
     color: var(--font-color-light-gray);
+}
+
+.comment-text {
+    word-break: break-all;
 }
 /* Skeleton */
 .skeleton {
